--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -9,3 +9,4 @@ hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql = true
 hibernate.format_sql = false
 hibernate.hbm2ddl.auto = update
+#hibernate.hbm2ddl.auto = create
